--- a/04-Front-End/07-JavaScript-Plugins/Optional-01-AJAX-wagon-race/Gemfile
+++ b/04-Front-End/07-JavaScript-Plugins/Optional-01-AJAX-wagon-race/Gemfile
@@ -1,8 +1,9 @@
-source 'https://rubygems.org'
+source "https://rubygems.org"
 
-gem 'rabl', '~> 0.10'
-gem 'rake', '~> 10.3'
-gem 'sequel', '~> 4.13'
-gem 'sinatra', '~> 1.4'
-gem 'sqlite3', '~> 1.3'
-gem 'activesupport', '~> 4'
+gem "activesupport"
+gem "rabl"
+gem "rake"
+gem "sequel"
+gem "sinatra"
+gem "sqlite3"
+gem "webrick"
