--- a/04-Front-End/07-JavaScript-Plugins/03-Vue/Rakefile
+++ b/04-Front-End/07-JavaScript-Plugins/03-Vue/Rakefile
@@ -1,9 +1,13 @@
+task :eslint do
+  system "../../node_modules/.bin/eslint lib/*.js"
+end
+
 task :mocha do
-  system "../../node_modules/.bin/mocha spec/*.js"
+  # Needed for Kitt
 end
 
 task :webpack do
   system "../../node_modules/.bin/webpack-dev-server"
 end
 
-task default: [:mocha]
+task default: [:eslint, :mocha]
