Dumping info to test if condition

--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -8,9 +8,11 @@ on:
 
 jobs:
   rubocop:
-    if: ${{ github.event.pull_request.head.repo.full_name == 'lewagon' }}
     runs-on: ubuntu-latest
     steps:
+      - name: Dump GitHub context
+        id: github_context_step
+        run: echo '${{ toJSON(github) }}'
       - uses: actions/checkout@v3
       - uses: ruby/setup-ruby@v1
         with:
