--- a/.github/workflows/readmes-checker.yml
+++ b/.github/workflows/readmes-checker.yml
@@ -7,7 +7,7 @@ on:
     types: [synchronize, opened]
 jobs:
   readmes-checker:
-    if: ${{ github.event.pull_request.head.repo.full_name == 'lewagon' }}
+    if: ${{ github.repository_owner == 'lewagon' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
