--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -8,11 +8,9 @@ on:
 
 jobs:
   rubocop:
+    if: ${{ github.repository_owner == 'lewagon' }}
     runs-on: ubuntu-latest
     steps:
-      - name: Dump GitHub context
-        id: github_context_step
-        run: echo '${{ toJSON(github) }}'
       - uses: actions/checkout@v3
       - uses: ruby/setup-ruby@v1
         with:
