--- a/04-Front-End/07-JavaScript-Plugins/04-Stimulus/.eslintrc.json
+++ b/04-Front-End/07-JavaScript-Plugins/04-Stimulus/.eslintrc.json
@@ -14,6 +14,7 @@
     "class-methods-use-this": "off",
     "import/prefer-default-export": "off",
     "prefer-destructuring": "off",
+    "semi": ["error", "never"],
     "arrow-body-style": "off"
   },
   "env": {
