--- a/04-Front-End/04-JS-and-DOM/01-Even-or-odd/Rakefile
+++ b/04-Front-End/04-JS-and-DOM/01-Even-or-odd/Rakefile
@@ -1,43 +1,5 @@
-require 'rake'
-require 'watir'
-require 'colorize'
-
-desc "Run tests on challenge"
-task :watir do
-  serve_running_check = system "lsof -wni 'tcp:8000'"
-  unless serve_running_check
-    pid = Process.spawn("ruby -run -e httpd . -p 8000")
-  end
-  browser = Watir::Browser.new
-  browser.goto("http://localhost:8000/")
-  li_suite = browser.li(class: 'suite')
-  5.times do
-    puts ""
-  end
-  testing_function = li_suite.h1
-  puts testing_function.text
-  ul = li_suite.ul
-  passing_tests = []
-  failing_tests = []
-  ul.lis.each do |element|
-    element_classes = element.attribute_value("class")
-    match_data = element.h2.text.match(/(?<test>.*)/)
-    if element_classes.include?("pass")
-      passing_tests << element.h2.text
-      puts match_data[:test].green
-    elsif element_classes.include?("fail")
-      failing_tests << element.h2.text
-      puts match_data[:test].red
-    end
-  end
-  puts "#{passing_tests.size} passing".green
-  puts "#{failing_tests.size} failing".red unless failing_tests.size.zero?
-  5.times do
-    puts ""
-  end
-  unless serve_running_check
-    Process.kill(:QUIT, pid) && Process.wait
-  end
+task :mocha do
+  system "../../node_modules/.bin/mocha spec/*.js"
 end
 
-task default: [:watir]
+task default: [:mocha]
