--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,10 @@ Style/RedundantReturn:
   Enabled: false
 Style/SelfAssignment:
   Enabled: false
+Style/SafeNavigation:
+  Enabled: false
+Style/HashSyntax:
+  Enabled: false
 Style/Documentation:
   Enabled: false
 Style/RegexpLiteral:
