--- a/04-Front-End/05-Events-and-Iterators/04-Wagon-Race/Rakefile
+++ b/04-Front-End/05-Events-and-Iterators/04-Wagon-Race/Rakefile
@@ -1,3 +1,5 @@
-task :mocha do
-  # Needed for Kitt
+task :eslint do
+  system "../../node_modules/.bin/eslint lib/*.js"
 end
+
+task default: [:eslint]
