Fix Sinatra challenge `rake`

--- a/03-AR-Database/01-DB-and-SQL/Optional-04-Jukebox-Sinatra/Gemfile
+++ b/03-AR-Database/01-DB-and-SQL/Optional-04-Jukebox-Sinatra/Gemfile
@@ -4,6 +4,9 @@ gem "binding_of_caller"
 gem "faker"
 gem "pry-byebug"
 gem "rack-test"
+gem "rake"
+gem "rspec"
+gem "rubocop"
 gem "sinatra"
 gem "sinatra-contrib"
 gem "sqlite3"
